# cloudflare-images-dev

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: constants.rs  handlers.rs  main.rs  responses.rs  routes.rs  variants.rs
src/handlers/: mod.rs  serve_image_handler.rs  upload_image_handler.rs
src/util/: mod.rs  parse_variants.rs  process_variants.rs  resize_image.rs  save_original_image.rs
