[package]
name = "cloudflare_images_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.6"
tokio = { version = "1.35.0", features = ["full"] }
bytes = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
mime_guess = "2.0.4"
